/*
 * Copyright 2026, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.validation.testing.integration;

// Integration test messages demonstrating multiple validation constraints.
//
// This file showcases complex validation scenarios combining required_field,
// required, pattern, min/max, and range constraints in an account management
// context.

import "spine/options.proto";

// Account message combining multiple validation constraints.
message Account {
    option (require).fields = "id | email";

    int32 id = 1 [(min).value = "1"];
    // Must be a valid email address (basic format validation).
    string email = 2 [
        (required) = true,
        (pattern).regex = "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$",
        (pattern).error_msg = "Invalid email format: `{value}`."
    ];
    // Must be 3-20 characters containing only letters, numbers, underscores, or hyphens.
    string username = 3 [
        (required) = true,
        (pattern).regex = "^[A-Za-z0-9_-]{3,20}$",
        (pattern).error_msg = "Username must be 3-20 characters (letters, numbers, _, -). Got: `{value}`."
    ];
    // Must be at least 8 characters long.
    string password = 4 [
        (required) = true,
        (pattern).regex = "^.{8,}$",
        (pattern).error_msg = "Password must be at least 8 characters. Got length: {value}."
    ];
    AccountType account_type = 5 [(required) = true];
    int32 age = 6 [
        (required) = true,
        (range).value = "[13..120]"
    ];
    double balance = 7 [
        (min).value = "0.0",
        (max).value = "1000000.0"
    ];
    int32 failed_login_attempts = 8 [(range).value = "[0..5]"];
    double rating = 9 [(range).value = "[1.0..5.0]"];
}

// Account type enumeration.
enum AccountType {
    ACCOUNT_TYPE_UNSPECIFIED = 0;
    ACCOUNT_TYPE_FREE = 1;
    ACCOUNT_TYPE_PREMIUM = 2;
    ACCOUNT_TYPE_ENTERPRISE = 3;
}
